force-app/main/default/objects/SPEN_ReferralService__c/SPEN_ReferralService__c.object-meta.xml
<CustomObject>
    <label>Referral Service</label>
    <nameField>
        <displayFormat>RS-{000000}</displayFormat>
        <label>Referral Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>