force-app/main/default/objects/SPEN_ReferralService__c/fields/SPEN_AdditionalCostSaving__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AdditionalCostSaving__c</fullName>
    <description>CRMD-5468</description>
    <label>Additional Cost Saving</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>