force-app/main/default/objects/SPEN_ReferralService__c/fields/SPEN_ClosureCode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ClosureCode__c</fullName>
    <description>CRMD-5468</description>
    <label>Closure Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_ClosureCode</valueSetName>
    </valueSet>
</CustomField>