force-app/main/default/objects/SPEN_ReferralService__c/fields/SPEN_ClosureDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ClosureDate__c</fullName>
    <description>CRMD-5451: To capture the closed time of referral Service Record.</description>
    <label>Closure Date</label>
    <type>Date</type>
</CustomField>