force-app/main/default/objects/SPEN_ReferralService__c/fields/SPEN_CustomerSatisfaction__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CustomerSatisfaction__c</fullName>
    <description>CRMD-5451: Feedback Changes</description>
    <label>Customer Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>