force-app/main/default/objects/SPEN_ReferralService__c/fields/SPEN_DateCustomerContactedbyPartner__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DateCustomerContactedbyPartner__c</fullName>
    <description>CRMD-5468</description>
    <label>Date Customer Contacted by Partner</label>
    <type>Date</type>
</CustomField>