force-app/main/default/objects/SPEN_ReferralService__c/fields/SPEN_DateReferralReceivedbyPartner__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DateReferralReceivedbyPartner__c</fullName>
    <description>CRMD-5468</description>
    <label>Date Referral Received by Partner</label>
    <type>Date</type>
</CustomField>