force-app/main/default/objects/SPEN_ReferralService__c/fields/SPEN_DueDateforNextPartnerContact__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DueDateforNextPartnerContact__c</fullName>
    <description>CRMD-5468</description>
    <label>Due Date for next Partner Contact</label>
    <type>Date</type>
</CustomField>