force-app/main/default/objects/SPEN_ReferralService__c/fields/SPEN_Feedbackexpected__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Feedbackexpected__c</fullName>
    <description>CRMD-5468: It indicating whether partner is supposed to give feedback at all.(to be pulled from the Partner record)</description>
    <formula>TEXT(SPEN_PartnerName__r.SPEN_PartnerFeedback__c)</formula>
    <label>Feedback expected?</label>
    <type>Text</type>
</CustomField>