force-app/main/default/objects/SPEN_ReferralService__c/fields/SPEN_FeedbackReceived__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FeedbackReceived__c</fullName>
    <description>CRMD-5468</description>
    <label>Feedback Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>