force-app/main/default/objects/SPEN_ReferralService__c/fields/SPEN_PartnerName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PartnerName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CRMD-5468</description>
    <label>Partner Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>SPEN_Partner</value>
        </filterItems>
        <filterItems>
            <field>Account.SPEN_PartnerType__c</field>
            <operation>equals</operation>
            <value>Referrals</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referral Services</relationshipLabel>
    <relationshipName>Referral_Services</relationshipName>
    <type>Lookup</type>
</CustomField>