force-app/main/default/objects/SPEN_ReferralService__c/fields/SPEN_Service__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Service__c</fullName>
    <description>CRMD-5468</description>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_ReferralServices</valueSetName>
    </valueSet>
</CustomField>