force-app/main/default/objects/SPEN_ReferralService__c/fields/SPEN_ServiceStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ServiceStatus__c</fullName>
    <description>CRMD-5468</description>
    <label>Service Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>With Partner</fullName>
            </value>
            <value>
                <fullName>Awaiting Customer Feedback</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Awaiting Partner Feedback</fullName>
                <isActive>false</isActive>
                <label>Awaiting Partner Feedback</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>