force-app/main/default/objects/SPEN_ReferralService__c/fields/SPEN_SLA__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SLA__c</fullName>
    <description>CRMD-5468: It to be pulled from the associated partner against the service record</description>
    <formula>SPEN_PartnerName__r.SPEN_SLA__c</formula>
    <label>SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>