force-app/main/default/objects/SPEN_ReferralService__c/fields/SPEN_Story__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Story__c</fullName>
    <description>CRMD-5468</description>
    <label>Story</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>