force-app/main/default/objects/SPEN_ReferralService__c/fields/SPEN_SummaryofActionsComments__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SummaryofActionsComments__c</fullName>
    <description>CRMD-5468</description>
    <label>Summary of Actions/Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>