force-app/main/default/objects/SPEN_ReferralService__c/validationRules/SPEN_ClosedCaseReferralServices.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_ClosedCaseReferralServices</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
NOT(ISPICKVAL(SPEN_ServiceStatus__c, &apos;Closed&apos;)),
ISPICKVAL(SPEN_Case__r.Status, &apos;Closed&apos;)
)</errorConditionFormula>
    <errorMessage>A Referral Service can&apos;t be re-opened if the Case is Closed.</errorMessage>
</ValidationRule>