force-app/main/default/objects/SPEN_ReferralService__c/validationRules/SPEN_ClosureMandatoryonClosedStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_ClosureMandatoryonClosedStatus</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(SPEN_ServiceStatus__c, &apos;Closed&apos;) , 
OR(
ISBLANK( TEXT(SPEN_ClosureCode__c )),
ISBLANK( SPEN_ClosureDate__c ),
ISBLANK( TEXT( SPEN_CustomerSatisfaction__c )),
ISBLANK( TEXT( SPEN_CustomerSatisfactionLevel__c )))
)</errorConditionFormula>
    <errorMessage>It is mandatory to populate &apos;Closure Date&apos;, &apos;Customer Satisfaction&apos;, &apos;Customer Satisfaction Level, &apos;Closure Code&apos; before closing.</errorMessage>
</ValidationRule>