force-app/main/default/objects/SPEN_ReferralService__c/validationRules/SPEN_DueDateMandatorybasedonStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_DueDateMandatorybasedonStatus</fullName>
    <active>false</active>
    <description>CRMD-5468</description>
    <errorConditionFormula>IF( ISPICKVAL( SPEN_ServiceStatus__c , &apos;Partner Identified&apos;) || ISPICKVAL( SPEN_ServiceStatus__c , &apos;Awaiting Partner Feedback&apos;),  ISNULL( SPEN_DueDateforNextPartnerContact__c ) , Null)</errorConditionFormula>
    <errorMessage>Please Fill Due Date for next Partner Contact.</errorMessage>
</ValidationRule>