force-app/main/default/objects/SPEN_ReferralService__c/validationRules/SPEN_UpdatePartnerAccountOnServiceChange.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_UpdatePartnerAccountOnServiceChange</fullName>
    <active>true</active>
    <description>CRMD - 5522 Error to be thrown for amending/clearing the partner account name when the Service associated with the referral service record is updated</description>
    <errorConditionFormula>AND(
NOT( ISNEW()),
IF(ISCHANGED( SPEN_Service__c ), 
 IF(ISBLANK( SPEN_PartnerName__c ) , FALSE, TRUE), 
 FALSE))</errorConditionFormula>
    <errorMessage>You have updated the &apos;Service&apos; field - Please clear the &apos;Partner Name&apos; field and update it using the &apos;Select Partner&apos; widget.</errorMessage>
</ValidationRule>